--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
             "YoannRenard\\PHPUnitAnnotation\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "YoannRenard\\PHPUnitAnnotation\\": "tests/"
+        }
+    },
     "config": {
         "bin-dir": "bin"
     },
