--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "yoannrenard/phpunit-annotation-testcase",
     "description": "Use simple annotation to mock the world",
-    "type": "library, phpunit",
+    "type": "library",
     "license": "MIT",
     "authors": [
         {
@@ -23,7 +23,9 @@
         "bin-dir": "bin"
     },
     "require": {
-        "php": ">=5.6",
-        "phpunit/phpunit": ">=4.5.0"
+        "php": ">=5.6"
+    },
+    "require-dev": {
+        "phpunit/phpunit": ">=4.5"
     }
 }
