--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
         "bin-dir": "bin"
     },
     "require": {
-        "php": ">=5.6"
+        "php": ">7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=4.5"
+        "phpunit/phpunit": "~7.5"
     }
 }
