--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
         "bin-dir": "bin"
     },
     "require": {
-        "php": ">7.4"
+        "php": ">=8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~7.5"
+        "phpunit/phpunit": "^9.3"
     }
 }
