--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,8 @@
         "bin-dir": "bin"
     },
     "require": {
-        "php": ">=8.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.3"
+        "php": ">=8.0",
+        "phpunit/phpunit": "^9.3",
+        "phpspec/prophecy-phpunit": "^2.0"
     }
 }
